--- a/app/index.html
+++ b/app/index.html
@@ -4,12 +4,12 @@
     <script src="js/app.js"></script>
 </head>
 <body>
-<div ng-app="FoodTrack" ng-controller="dayController as day">
+<div ng-app="FoodTrack" ng-controller="dayController">
 <div ng-controller="settingsController as settings">
-   <p ng-repeat="(foodType, value) in day.today">
+   <p ng-repeat="(foodType, value) in today">
     {{foodType}}: {{value}}/{{settings.ftSettings.maxPortions[foodType]}}
-    <button ng-click="day.add(foodType,  1)">+</button>
-    <button ng-click="day.add(foodType, -1)">-</button>
+    <button ng-click="add(foodType,  1)">+</button>
+    <button ng-click="add(foodType, -1)">-</button>
     <span ng-show="value >= settings.ftSettings.maxPortions[foodType]">Carefull!</span>
    </p>
 </div>
