--- a/app/index.html
+++ b/app/index.html
@@ -1,18 +1,29 @@
-<!DOCTYPE html>
-<head>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.13/angular.min.js"></script>
-    <script src="js/app.js"></script>
-</head>
-<body>
-<div ng-app="FoodTrack" ng-controller="dayController">
-<div ng-controller="settingsController as settings">
-   <p ng-repeat="(foodType, value) in today">
-    {{foodType}}: {{value}}/{{settings.ftSettings.maxPortions[foodType]}}
-    <button ng-click="add(foodType,  1)">+</button>
-    <button ng-click="add(foodType, -1)">-</button>
-    <span ng-show="value >= settings.ftSettings.maxPortions[foodType]">Carefull!</span>
-   </p>
-</div>
-</div>
-</body>
+<!DOCTYPE html lang="en">
+    <head>
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.6/angular.min.js"></script>
+        <script src="//ajax.googleapis.com/ajax/libs/angular_material/0.8.2/angular-material.min.js"></script>
+        <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.6/angular-animate.min.js"></script>
+        <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular-aria.min.js"></script>
+        <script src="js/app.js"></script>
+
+        <link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/angular_material/0.8.2/angular-material.min.css">
+        <link rel="stylesheet" href="css/app.css">
+    </head>
+    <body layout="column" ng-app="FoodTrack">
+        <md-toolbar layout="row">
+            <h1>Food Track</h1>
+        </md-toolbar>
+        <md-content>
+        <div ng-controller="dayController" layout="row">
+            <div ng-controller="settingsController as settings">
+               <p ng-repeat="(foodType, value) in today">
+                {{foodType}}: {{value}} / {{settings.ftSettings.maxPortions[foodType]}}
+                <md-button class="md-raised countButton" ng-click="add(foodType,  1)">+</md-button>
+                <md-button class="md-raised countButton" ng-click="add(foodType, -1)">-</md-button>
+                <span ng-show="value >= settings.ftSettings.maxPortions[foodType]">Carefull!</span>
+               </p>
+            </div>
+        </div>
+        </md-content>
+    </body>
 </html>
