design: add padding

--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,7 @@
         <md-toolbar layout="row">
             <h1>Food Track</h1>
         </md-toolbar>
-        <md-content>
+        <md-content class="md-padding">
         <div ng-controller="dayController" layout="row">
             <div ng-controller="settingsController as settings">
                <p ng-repeat="(foodType, value) in today">
