--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,7 @@
-<!DOCTYPE html lang="en">
+<!DOCTYPE html>
+<html>
     <head>
+        <meta name="viewport" content="initial-scale=1, maximum-scale=1">
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.6/angular.min.js"></script>
         <script src="//ajax.googleapis.com/ajax/libs/angular_material/0.8.2/angular-material.min.js"></script>
         <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.6/angular-animate.min.js"></script>
@@ -9,21 +11,33 @@
         <link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/angular_material/0.8.2/angular-material.min.css">
         <link rel="stylesheet" href="css/app.css">
     </head>
-    <body layout="column" ng-app="FoodTrack">
-        <md-toolbar layout="row">
-            <h1>Food Track</h1>
-        </md-toolbar>
-        <md-content class="md-padding">
-        <div ng-controller="dayController" layout="row">
-            <div ng-controller="settingsController as settings">
-               <p ng-repeat="(foodType, value) in today">
-                {{foodType}}: {{value}} / {{settings.ftSettings.maxPortions[foodType]}}
-                <md-button class="md-raised countButton" ng-click="add(foodType,  1)">+</md-button>
-                <md-button class="md-raised countButton" ng-click="add(foodType, -1)">-</md-button>
-                <span ng-show="value >= settings.ftSettings.maxPortions[foodType]">Carefull!</span>
-               </p>
-            </div>
+    <body layout="row" ng-app="FoodTrack">
+        <div layout="column" flex>
+            <md-toolbar class="md-default-theme">
+                <div class="md-toolbar-tools">
+                    <div layout="row" flex class="fill-height">
+                        <div class="md-toolbar-item">
+                        Food Track
+                        </div>
+                    </div>
+                </div>
+            </md-toolbar>
+            <md-content flex class="md-padding md-default-theme md-scroll-y" ng-controller="settingsController as settings">
+               <div ng-controller="dayController" layout="column">
+                   <div ng-repeat="(foodType, value) in today" layout="row" layout-padding>
+                       <div flex="50">
+                           {{foodType}}: {{value}} / {{settings.ftSettings.maxPortions[foodType]}}
+                       </div>
+                       <div flex>
+                           <md-button  class="md-raised countButton" ng-click="add(foodType,  1)">+</md-button>
+                       </div>
+                       <div flex>
+                           <md-button class="md-raised countButton" ng-click="add(foodType, -1)">-</md-button>
+                           <span ng-show="value >= settings.ftSettings.maxPortions[foodType]">Carefull!</span>
+                       </div>
+                   </div>
+                </div>
+            </md-content>
         </div>
-        </md-content>
     </body>
 </html>
