--- a/app/index.html
+++ b/app/index.html
@@ -7,9 +7,11 @@
         <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.6/angular-animate.min.js"></script>
         <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular-aria.min.js"></script>
         <script src="js/app.js"></script>
+        <script src="//www.parsecdn.com/js/parse-1.3.5.min.js"></script>
 
         <link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/angular_material/0.8.2/angular-material.min.css">
         <link rel="stylesheet" href="css/app.css">
+
     </head>
     <body layout="row" ng-app="FoodTrack">
         <div layout="column" flex>
@@ -36,6 +38,7 @@
                            <span ng-show="value >= settings.ftSettings.maxPortions[foodType]">Carefull!</span>
                        </div>
                    </div>
+                   <md-button class="md-raised" ng-click="save()">Save</md-button>
                 </div>
             </md-content>
         </div>
