--- a/app/index.html
+++ b/app/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta name="viewport" content="initial-scale=1, maximum-scale=1">
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.6/angular.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.6/angular-route.min.js"></script>
         <script src="//ajax.googleapis.com/ajax/libs/angular_material/0.8.2/angular-material.min.js"></script>
         <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.6/angular-animate.min.js"></script>
         <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular-aria.min.js"></script>
@@ -24,23 +25,7 @@
                     </div>
                 </div>
             </md-toolbar>
-            <md-content flex class="md-padding md-default-theme md-scroll-y" ng-controller="settingsController as settings">
-               <div ng-controller="dayController" layout="column">
-                   <div ng-repeat="(foodType, value) in today" layout="row" layout-padding>
-                       <div flex="50">
-                           {{foodType}}: {{value}} / {{settings.ftSettings.maxPortions[foodType]}}
-                       </div>
-                       <div flex>
-                           <md-button  class="md-raised countButton" ng-click="add(foodType,  1)">+</md-button>
-                       </div>
-                       <div flex>
-                           <md-button class="md-raised countButton" ng-click="add(foodType, -1)">-</md-button>
-                           <span ng-show="value >= settings.ftSettings.maxPortions[foodType]">Carefull!</span>
-                       </div>
-                   </div>
-                   <md-button class="md-raised" ng-click="save()">Save</md-button>
-                </div>
-            </md-content>
+            <div ng-view></div>
         </div>
     </body>
 </html>
